# solid_mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  release-please-config.json  solid_mcp.gemspec
.github/workflows/: ci.yml  main.yml  release-please.yml  release.yml
app/models/solid_mcp/: message.rb  record.rb
db/migrate/: 20250624000001_create_solid_mcp_messages.rb
ext/solid_mcp_native/: Cargo.toml  extconf.rb
ext/solid_mcp_native/core/: Cargo.toml
ext/solid_mcp_native/core/src/: config.rs  error.rs  lib.rs  message.rs  pubsub.rs  subscriber.rs  writer.rs
ext/solid_mcp_native/core/src/db/: mod.rs  postgres.rs  sqlite.rs
ext/solid_mcp_native/ffi/: Cargo.toml  extconf.rb
ext/solid_mcp_native/ffi/src/: lib.rs
lib/: solid_mcp.rb
lib/generators/solid_mcp/install/: install_generator.rb
lib/generators/solid_mcp/install/templates/: create_solid_mcp_messages.rb.erb  solid_mcp.rb
lib/solid_mcp/: cleanup_job.rb  configuration.rb  engine.rb  logger.rb  message_writer.rb  native_speedup.rb  pub_sub.rb  subscriber.rb  test_pub_sub.rb  version.rb
sig/: solid_mcp.rbs
test/: benchmark.rb  test_helper.rb  test_solid_mcp.rb
test/dummy/: nil
test/dummy/config/: application.rb  cable.yml  cache.yml  database.yml  routes.rb
test/dummy/config/environments/: test.rb
test/dummy/config/initializers/: solid_mcp.rb
test/dummy/db/: schema.rb
test/dummy/db/migrate/: 20250624000001_create_solid_mcp_messages.rb
test/dummy/test/fixtures/: users.yml
test/dummy/test/models/: user_test.rb
test/dummy/tmp/: local_secret.txt
test/solid_mcp/: configuration_test.rb  integration_test.rb  message_test.rb  message_writer_test.rb  pub_sub_test.rb  sse_resumability_test.rb  subscriber_test.rb
