[workspace]
members = ["core", "ffi"]
resolver = "2"

[workspace.dependencies]
solid-mcp-core = { path = "./core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono"] }
