[package]
name = "solid-mcp-core"
version = "0.1.0"
edition = "2024"
authors = ["Abdelkader Boudih <terminale@gmail.com>"]
license = "MIT"
description = "High-performance async pub/sub engine for MCP (Model Context Protocol)"
repository = "https://github.com/seuros/solid_mcp"
keywords = ["mcp", "pub-sub", "async", "tokio"]
categories = ["asynchronous", "database"]

[lib]
crate-type = ["lib"]

[features]
default = ["sqlite", "postgres"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
